--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 node_modules/
-dist/
 npm-debug.log
+package-lock.json
 yarn-error.log
+yarn.lock
 
 # Editor directories and files
 .idea
